# retro_iv

./: .gitignore  CMakeLists.txt  README.md  prj.conf
boards/: rpi_pico2_rp2350a_m33.overlay
src/: gpio_i2c.c  gpio_i2c.h  main.c  main_fsm.c  main_fsm.h  slic.c  slic.h  spio.c  spio.h  tones.c  tones.h
